# imu_loca

./: CMakeLists.txt  README.MK  exec.sh
IMU_READ/: imuDataRead.cpp  imuDataRead.h  main.cpp
include/: config.h  imu.h  imu_abstract.h  imu_math.h
src/: imu.cpp  imu_math.cpp
test/: CMakeLists.txt  matrix_test.cpp  navgation_test.cpp  readNav.cpp
